--- a/src/templates/partials/_welcome.html
+++ b/src/templates/partials/_welcome.html
@@ -57,12 +57,12 @@
         $('.slider--big').slick({
             autoplay: true,
             infinite: true,
-            slidesToShow: 3,
-            slidesToScroll: 3,
+            slidesToShow: 1,
+            slidesToScroll: 1,
             dots: true,
             arrows: false,
             fade: true,
-            asNavFor: '.slider--big',
+            // asNavFor: '.slider--big',
             dotsClass: 'slider__dots',
             // asNavFor: '.slider--small'
         });
