--- a/src/scss/_team.scss
+++ b/src/scss/_team.scss
@@ -11,6 +11,7 @@
     }
     &__member {
         padding: 0 23px;
+        width: 188px;
         // margin-right: 3.5%;
         // &:last-child {
         //     margin-right: 0;
