--- a/src/scss/_hire.scss
+++ b/src/scss/_hire.scss
@@ -5,7 +5,7 @@
     &__content {
         background-color: $color-mainYellow;
         color: $color-white;
-        padding: 37px 26px 33px 50px;
+        padding: 3%;
         font-family: $buttons-font-family;
         transform: translateY(-50%);
     }
@@ -19,9 +19,10 @@
         float: right;
         color: #3a3a3a;
         border: none;
+        white-space: nowrap;
         border-radius: 2px;
         box-shadow: 1px 2px 4.75px 0.25px rgba(0, 0, 0, 0.25);
-        padding: 13px 41px;
+        padding: 1.5% 4%;
         background-color: $color-white;
         transform: translateY(-80%);
         font-size: 20px;
