--- a/src/scss/_history.scss
+++ b/src/scss/_history.scss
@@ -1,5 +1,4 @@
 @import 'variables';
-
 .history {
     width: 100%;
     background: #f9f8f8;
@@ -9,7 +8,7 @@
         padding: 3em 0;
     }
     &__left {
-        width: 45%;
+        width: 50%;
         background-color: $color-white;
     }
     &__image {
@@ -17,24 +16,27 @@
         width: 100%;
     }
     &__right {
-        width: 45%;
+        position: relative;
+        width: 50%;
+        padding-left: 20px;
     }
     &__title {
         &--no-space {
-          margin: 0;
-          transform: none;
+            margin: 0 !important;
+            transform: none !important;
         }
     }
     &__text {
         padding: 1.5em 0;
         font-size: $p-font-size;
         color: $p-font-color;
-        line-height: 1.5em;
+        line-height: 1.9;
         font-weight: $p-font-weight;
         flex-grow: 1;
     }
     &__button {
+        position: absolute;
         text-transform: uppercase;
-        margin-top: auto
+        bottom: 0;
     }
 }
