remove border on focus slider

--- a/src/scss/_welcome.scss
+++ b/src/scss/_welcome.scss
@@ -126,6 +126,10 @@
                 border-radius: 100%;
                 text-indent: -9999px;
                 background-color: $color-mainGrey; // text-indent: -9999px;
+
+                &:focus{
+                    outline: none;
+                }
             }
         }
     }
