--- a/src/scss/_history.scss
+++ b/src/scss/_history.scss
@@ -1,40 +1,39 @@
 @import 'variables';
 
 .history {
+  width: 100%;
+  background: #f9f8f8;
+  &__container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__left {
+    width: 45%;
+    background-color: $color-white;
+  }
+  &__image {
+    height: 100%;
     width: 100%;
-    background: #f9f8f8;
-    &__container {
-        display: flex;
-        justify-content: space-between;
-        padding: 3em 0;
+  }
+  &__right {
+    width: 45%;
+  }
+  &__title {
+    &--no-space {
+      margin: 0;
+      transform: none;
     }
-    &__left {
-        width: 45%;
-        background-color: $color-white;
-    }
-    &__image {
-        height: 100%;
-        width: 100%;
-    }
-    &__right {
-        width: 45%;
-    }
-    &__title {
-        &--no-space {
-          margin: 0;
-          transform: none;
-        }
-    }
-    &__text {
-        padding: 1.5em 0;
-        font-size: $p-font-size;
-        color: $p-font-color;
-        line-height: 1.5em;
-        font-weight: $p-font-weight;
-        flex-grow: 1;
-    }
-    &__button {
-        text-transform: uppercase;
-        margin-top: auto
-    }
+  }
+  &__text {
+    font-size: $p-font-size;
+    color: $p-font-color;
+    line-height: $p-line-height;
+    font-weight: $p-font-weight;
+    flex-grow: 1;
+  }
+  &__button {
+    text-transform: uppercase;
+    margin-top: auto
+  }
 }
