--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -4,6 +4,10 @@
             <div class="logo__element logo__element--bordered logo__element--light">UNIQUE</div>
             <div class="logo__element">TECH</div>
         </a>
+        <button class="nav__burger">
+                <i class="fas fa-bars"></i>
+        </button>
+
         <nav class="nav">
             <ul class="nav__block">
                 <li class="nav__element"><a class="nav__link" href="#">home</a></li>
