--- a/src/templates/partials/_history.html
+++ b/src/templates/partials/_history.html
@@ -1,5 +1,5 @@
 <section class="history">
-    <div class="container history__container">
+    <div class="container history__container" data-aos="fade-right">
         <div class="history__left">
             <img class="history__image" src="img/svg/happy_clerk.svg">
         </div>
