--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -5,22 +5,54 @@
     <meta charset="UTF-8">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:100,300,400,500,700,900|Source+Sans+Pro:700&amp;subset=cyrillic-ext"
-        rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css" integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css" integrity="sha384-1rquJLNOM3ijoueaaeS5m+McXPJCGdr5HcA03/VHXxcp2kX2sUrQDmFc3jR5i/C7"
-        crossorigin="anonymous">
+          rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css"
+          integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css"
+          integrity="sha384-1rquJLNOM3ijoueaaeS5m+McXPJCGdr5HcA03/VHXxcp2kX2sUrQDmFc3jR5i/C7"
+          crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <title>Unique-tech</title>
 </head>
 
 <body>
 
-    {% block content %} {% endblock %} {#
-    <script src="js/main.js"></script> #}
+{% block content %} {% endblock %} {#
+<script src="js/main.js"></script>
 
+<!--<script>-->
+<!--import AOS from 'aos';-->
+<!--import 'aos/dist/aos.css'; // You can also use <link> for styles-->
+<!--AOS.init();-->
+
+<!--// You can also pass an optional settings object-->
+<!--// below listed default settings-->
+<!--AOS.init({-->
+<!--// Global settings-->
+<!--disable: false, // accepts following values: 'phone', 'tablet', 'mobile', boolean, expression or function-->
+<!--startEvent: 'DOMContentLoaded', // name of the event dispatched on the document, that AOS should initialize on-->
+<!--initClassName: 'aos-init', // class applied after initialization-->
+<!--animatedClassName: 'aos-animate', // class applied on animation-->
+<!--useClassNames: false, // if true, will add content of `data-aos` as classes on scroll-->
+
+<!--// Settings that can be overriden on per-element basis, by `data-aos-*` attributes:-->
+<!--offset: 120, // offset (in px) from the original trigger point-->
+<!--delay: 0, // values from 0 to 3000, with step 50ms-->
+<!--duration: 400, // values from 0 to 3000, with step 50ms-->
+<!--easing: 'ease', // default easing for AOS animations-->
+<!--once: false, // whether animation should happen only once - while scrolling down-->
+<!--mirror: false, // whether elements should animate out while scrolling past them-->
+<!--anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation-->
+<!--});</script>-->
+#}
+
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>AOS.init();</script>
 </body>
 
+<!--<script type="text/javascript" src="../../build/aos.js"></script>-->
 </html>
