--- a/src/templates/partials/_features.html
+++ b/src/templates/partials/_features.html
@@ -1,12 +1,13 @@
 <section class="features">
-    <div class="container features__container">
+    <div class="container features__container" data-aos="fade-right">
         <h2 class="features__heading section-name section-name--mw330  section-name--arrow-r">our features</h2>
         <div class="features__content">
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/notes27.svg">
                 <div>
                     <h3 class="features__head">Visual Composer</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or
                         to
                         remember any shortcodes with our. </p></div>
@@ -16,7 +17,8 @@
 
                 <div>
                     <h3 class="features__head">Responsive</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or to
                         remember any shortcodes with our. </p>
                 </div>
@@ -25,7 +27,8 @@
                 <img class="features__img" src="img/svg/icons/notebook79.svg">
                 <div>
                     <h3 class="features__head">Retina Ready</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or to
                         remember any shortcodes with our. </p>
                 </div>
@@ -34,7 +37,8 @@
                 <img class="features__img" src="img/svg/icons/pencil124.svg">
                 <div>
                     <h3 class="features__head">Typography</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or to
                         remember any shortcodes with our. </p>
                 </div>
@@ -43,7 +47,8 @@
                 <img class="features__img" src="img/svg/icons/wallet35.svg">
                 <div>
                     <h3 class="features__head">VTheme Options Pannel</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or to
                         remember any shortcodes with our. </p>
                 </div>
@@ -52,7 +57,8 @@
                 <img class="features__img" src="img/svg/icons/hand224.svg">
                 <div>
                     <h3 class="features__head">Dummy Content</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or to
                         remember any shortcodes with our. </p>
                 </div>
@@ -61,7 +67,8 @@
                 <img class="features__img" src="img/svg/icons/globe32.svg">
                 <div>
                     <h3 class="features__head">Many Style Available</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or to
                         remember any shortcodes with our. </p>
                 </div>
@@ -70,7 +77,8 @@
                 <img class="features__img" src="img/svg/icons/cropping4.svg">
                 <div>
                     <h3 class="features__head">Header Style</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or to
                         remember any shortcodes with our. </p>
                 </div>
@@ -79,7 +87,8 @@
                 <img class="features__img" src="img/svg/icons/bag45.svg">
                 <div>
                     <h3 class="features__head">10000+ icons</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or to
                         remember any shortcodes with our. </p>
                 </div>
@@ -88,7 +97,8 @@
                 <img class="features__img" src="img/svg/icons/dish7.svg">
                 <div>
                     <h3 class="features__head">Support</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or to
                         remember any shortcodes with our. </p>
                 </div>
@@ -97,7 +107,8 @@
                 <img class="features__img" src="img/svg/icons/wealth.svg">
                 <div>
                     <h3 class="features__head">Update</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or to
                         remember any shortcodes with our. </p>
                 </div>
@@ -106,7 +117,8 @@
                 <img class="features__img" src="img/svg/icons/soft4.svg">
                 <div>
                     <h3 class="features__head">SEO Ready</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to
+                        code
                         or to
                         remember any shortcodes with our. </p>
                 </div>
