--- a/src/templates/partials/_hire_us.html
+++ b/src/templates/partials/_hire_us.html
@@ -1,5 +1,5 @@
 <section class="hire_us">
-    <div class="container">
+    <div class="container" data-aos="fade-left">
         <div class="hire">
             <img class="hire__img" src="img/png/hire.png">
             <div class="hire__content">
