--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -1,5 +1,5 @@
 <section class="projects">
-    <div class="container">
+    <div class="container" data-aos="fade-up-left">
         <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED PROJECTS</h2>
         <!-- <svg class="airplane"></svg> -->
         <div class="projects__block">
