--- a/src/templates/partials/_support.html
+++ b/src/templates/partials/_support.html
@@ -1,5 +1,5 @@
 <section class="support">
-    <div class="container">
+    <div class="container" data-aos="fade-down-left">
         <h2 class="support__name section-name section-name--mw446  section-name--arrow-r">UPDATES & SUPPORT</h2>
         <!-- <svg class="airplane"></svg> -->
         <div class="suppport__inner">
