--- a/src/scss/_team.scss
+++ b/src/scss/_team.scss
@@ -11,7 +11,7 @@
     }
     &__member {
         padding: 0 23px;
-        width: 188px;
+        width: 171px;
         // margin-right: 3.5%;
         // &:last-child {
         //     margin-right: 0;
@@ -31,6 +31,7 @@
     &__name {
         font-weight: $font-weight-700;
         padding: 18px 0;
+        white-space: nowrap;
     }
     &__position {
         font-weight: 200;
