--- a/src/scss/_team.scss
+++ b/src/scss/_team.scss
@@ -6,12 +6,15 @@
         justify-content: center;
         flex-wrap: wrap;
         padding-top: 60px;
-        padding-bottom: 15px;
+        padding-bottom: 25px;
         // margin-bottom: 130px;
     }
     &__member {
         padding: 0 23px;
         width: 171px;
+        &:hover {
+            transform: scale(1.2);
+        }
         // margin-right: 3.5%;
         // &:last-child {
         //     margin-right: 0;
@@ -30,10 +33,23 @@
     text-align: center;
     &__name {
         font-weight: $font-weight-700;
-        padding: 18px 0;
+        padding: 13px 0;
         white-space: nowrap;
     }
     &__position {
         font-weight: 200;
+    }
+}
+
+@media screen and (min-width:320px) and (max-width:479px) {
+    /* Target portrait smartphones */
+    .team {
+        &__wrapper {
+            padding: 10px;
+        }
+        &__member {
+            width: 50%;
+            padding: 0 10px;
+        }
     }
 }
