fix for history title

--- a/src/scss/_container.scss
+++ b/src/scss/_container.scss
@@ -18,3 +18,9 @@
 .brand-yellow {
     background-color: $color-mainYellow;
 }
+
+@media screen and (max-width:959px) {
+    .container {
+        padding: 0 20px;
+    }
+}
