--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -123,7 +123,7 @@
     }
 }
 
-@media only screen and (max-height: 500px) {
+@media only screen and (max-height: 500px) and (max-width: 900px) {
     .nav {
         &__block {
             margin-top: 0;
