--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -4,7 +4,8 @@
         <!-- <svg class="airplane"></svg> -->
         <div class="projects__block">
             <figure>
-                <img class="projects__img" src="img/svg/technical_aid.svg" alt="TECHNICAL AID">
+
+                <object class="projects__img projects__img--1" type="image/svg+xml" data="img/svg/technical_aid.svg" height="135px">Your browser does not support SVGs</object>
                 <figcaption class="projects__caption">
                     <a href="#" class="projects__link">TECHNICAL AID</a>
                 </figcaption>
